--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -175,3 +175,34 @@ jobs:
             conventional-changelog-conventionalcommits
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup regctl
+        run: |
+          curl -L https://github.com/regclient/regclient/releases/download/v0.3.5/regctl-linux-amd64 >/tmp/regctl
+          chmod 755 /tmp/regctl
+            - id: Pull
+
+      - name: Docker meta
+        if: github.event_name != 'pull_request' && needs.meta.outputs.dockerhub-publish == 'true'
+        id: docker_action_meta
+        uses: docker/metadata-action@v4.0.1
+        with:
+          images: andrewgaul/s3proxy
+          flavor: |
+            latest=false
+          tags: |
+            type=sha
+            type=semver,pattern={{version}},value=${{ needs.meta.outputs.new_release_version }}
+            type=semver,pattern={{major}},value=${{ needs.meta.outputs.new_release_version }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ needs.meta.outputs.new_release_version }}
+            type=ref,event=branch
+            type=ref,event=pr
+            type=ref,event=tag
+          labels: |
+            org.opencontainers.image.licenses=Apache-2.0
+      - name: Publish to Docker
+        if: github.event_name != 'pull_request' && needs.meta.outputs.dockerhub-publish == 'true'
+        run: |
+          for line in $CONTAINER_DEST_TAGS; do echo working on "$line"; /tmp/regctl image copy $SOURCE_CONTAINER $line; done
+        env:
+          SOURCE_CONTAINER: ${{ needs.meta.outputs.new_release_version }}
+          CONTAINER_DEST_TAGS: ${{ steps.docker_action_meta.outputs.tags }}
