--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Main CI
 on:
   push:
     branches:
@@ -176,10 +176,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup regctl
+        if: github.event_name != 'pull_request' && needs.meta.outputs.dockerhub-publish == 'true'
         run: |
           curl -L https://github.com/regclient/regclient/releases/download/v0.3.5/regctl-linux-amd64 >/tmp/regctl
           chmod 755 /tmp/regctl
-            - id: Pull
 
       - name: Docker meta
         if: github.event_name != 'pull_request' && needs.meta.outputs.dockerhub-publish == 'true'
