fix: publish chart

--- a/.releaserc
+++ b/.releaserc
@@ -10,8 +10,8 @@
                 prerelease: false
             },
             {
-                "name": 'next',
-                prerelease: false
+                "name": 'helm-chart',
+                prerelease: true
             },
             {
                 name: 'next-major',
@@ -35,9 +35,17 @@
                     }
                 ],
                 "@semantic-release/release-notes-generator",
+                [
+                    "semantic-release-helm",
+                    {
+                        chartPath: './charts/s3proxy',
+                        registry: 'oci://ghcr.io/ryanfaircloth/s3proxy/charts'
+                    }
+                ],
                 ["@semantic-release/git", {
                     "assets": [
                         "pom.xml",
+                        "charts/s3proxy/Chart.yaml"
                     ],
                     "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
                 }],
