--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -45,9 +45,12 @@ jobs:
             @semantic-release/git
             @google/semantic-release-replace-plugin
             conventional-changelog-conventionalcommits
+            semantic-release-helm
           dry_run: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REGISTRY_USERNAME: ${{ github.repository_owner }}
+          REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
       - name: Docker meta
         id: docker_action_meta
         uses: docker/metadata-action@v4.0.1
@@ -172,8 +175,11 @@ jobs:
             @semantic-release/exec
             @semantic-release/git
             conventional-changelog-conventionalcommits
+            semantic-release-helm
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REGISTRY_USERNAME: ${{ github.repository_owner }}
+          REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup regctl
         if: github.event_name != 'pull_request' && needs.meta.outputs.dockerhub-publish == 'true'
         run: |
