--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ s3proxy.iml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 target/
+s3proxy-*.tgz
