--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -165,6 +165,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "18"
+      - uses: azure/setup-helm@v3
       - name: Semantic Release
         if: github.event_name != 'pull_request'
         id: version
