--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -132,12 +132,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
+      - name: Login to ghcr for docker
         uses: docker/login-action@v2.0.0
         if: github.event_name != 'pull_request' && needs.meta.outputs.dockerhub-publish == 'true'
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASS }}
+      - name: Login to ghcr for helm
+        run: |
+          echo ${{ secrets.GITHUB_TOKEN }} | helm registry login --password-stdin -u ${{ github.repository_owner }} ghcr.io/${{ github.repository_owner }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v2.0.0
